# taskeval

./: .envrc.example  .gitignore  README.md  app.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/chart_xlxs_outputs/: 1.xlsx  10.xlsx  11.xlsx  12.xlsx  13.xlsx  14.xlsx  15.xlsx  16.xlsx  17.xlsx  18.xlsx  19.xlsx  2.xlsx  20.xlsx  21.xlsx  22.xlsx  23.xlsx  24.xlsx  25.xlsx  26.xlsx  27.xlsx  28.xlsx  29.xlsx  3.xlsx  30.xlsx  31.xlsx  32.xlsx  33.xlsx  34.xlsx  35.xlsx  36.xlsx  4.xlsx  5.xlsx  6.xlsx  7.xlsx  8.xlsx  9.xlsx
scripts/: README.md
scripts/data_preparation/: sample_qa.py
scripts/evaluations/: expand_qa_results.py  figure_extractions.py  qa_evals.py
scripts/visualise_batch/: figure_ui.py  qa_ui.py
spikes/: test_eval.py  ui_chart.py  ui_ques.py
taskevals/: figure_extractions.py  pipeline.py  qa_answering.py  strategy_executor.py  task_classification.py  test_eval.py  ui_chart.py  ui_ques.py
ui/: figure_extractions.py  qa_answering.py  utils.py
