[tool.poetry]
name = "taskeval"
version = "0.1.0"
description = ""
authors = ["DILANI WIDANAPATHIRANAGE <s224731539@deakin.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.67.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
fire = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
